# ipo-extract

./: .env  .env.template  .gitignore  README.md  downloadPdf.py  getReportDate.py  getToc.py  pyproject.toml  requirements.txt
docs/: IpoFileList.xlsx
src/download_pdf/: 5.yearreport.py  checkfile.sh
src/get_toc/: A_前期准备_b文件类型筛查.py  B_结构分析_a提取二级标题.py
src/ipo_extract/: analyzerStyle.py  common_constants.py  config.py  downloadPdf.py  fontSize.py  getSecondTitle.py  getToc.py  llmChat.py  llm_chat.py  prompt_constants.py  re_pattern.py  table_config.py  table_enums.py  table_exists.py  table_extract.py  table_publish.py  table_publish1.py
src/ipo_extract/getToc/: A_前期准备_c报告类型筛查.py  A扫描任务.xlsx  B_结构分析_b分析提取效果.py
src/other/: download-model.py  getReportDate.py  getToc.py  hasToc.py  rename.py
