[project]
name = "ipo-extract"
version = "1.0.1"
description = "负责ipo招股说明书的表格抽取"
requires-python = ">=3.12"
dependencies = [
    "openpyxl",
    "requests",
    "urllib3",
    "pdfplumber",
    "OpenAI",
    "pandas",
    "dotenv",
    "loguru>=0.7.3",
    "paramiko>=3.5.1",
    "psycopg2>=2.9.10",
    "huggingface-hub>=0.30.2",
]
